# Something-Awesome

./: .env.example  .gitignore  Procfile  README.md  config.py.example  main.py  pyproject.toml  requirements.txt  sqli1.db
src/: sqli1.db
src/static/: style.css
src/static/highlight/: highlight.min.js
src/templates/: login.html
static/: custom.scss  script.js  style.css
templates/: error.html  index.html  layout.html  login.html  sqli1.html
vulnerable_webapp_scorpiontornado/: __init__.py  app.py  auth.py  db.py  sqli2_data.sql  sqli2_schema.sql
vulnerable_webapp_scorpiontornado/static/: script.js  style.css
vulnerable_webapp_scorpiontornado/static/highlight/: highlight.min.js
vulnerable_webapp_scorpiontornado/templates/: base.html  error.html  footer.html  index.html  login.html  sqli1.html  sqli2&3.html  sqli2.html  sqli_challenge.html  sqli_resources.html
